--- a/tensorflow/lite/kernels/internal/BUILD
+++ b/tensorflow/lite/kernels/internal/BUILD
@@ -563,6 +563,7 @@ cc_library(
         "reference/non_max_suppression.h",
         "reference/pad.h",
         "reference/pooling.h",
+        "reference/pow.h",
         "reference/prelu.h",
         "reference/process_broadcast_shapes.h",
         "reference/quantize.h",
@@ -667,6 +668,7 @@ cc_library(
         "reference/neg.h",
         "reference/pad.h",
         "reference/pooling.h",
+        "reference/pow.h",
         "reference/prelu.h",
         "reference/process_broadcast_shapes.h",
         "reference/quantize.h",
